Added List command, added Unit tests and improved core path handling